--- a/login.html
+++ b/login.html
@@ -5,32 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/login.css">
 </head>
 
-<body>
-    <div id="login-box">
-        <h1 class="text-center">Login Page</h1>
-        <label for="email">email</label>
-        <input type="email" name="email" id="email">
+<body class="d-flex flex-column justify-content-center align-items-center vh-100 bg-body-secondary">
+    <div id="login-box" class="container bg-body py-3">
+        <form action="">
 
+            <h1 class="text-center fs-4">Login Page</h1>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="name@example.com">
+            </div>
 
-        <label for="password">password</label>
-        <input type="password" name="password" id="password">
-
-        <div id="event">
-            <button type="submit">Submit</button>
-            <button type="reset">Cancel</button>
-        </div>
+            <div id="event" class="row justify-content-center">
+                <div class="col-6">
+                    <button type="submit" class="btn btn-primary w-100 m-0 ">Submit</button>
+                </div>
+                <div class="col-6">
+                    <button type="reset" class="btn btn-danger w-100 m-0">Cancel</button>
+                </div>
+            </div>
+        </form>
 
     </div>
 
 </body>
-
-<script>
-    document.addEventListener('click', function (e) {
-        console.log(e.target.id)
-    })
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+<script src="./js/Login.js"></script>
 
 </html>
